# pagesnap

./: .README.md.swp  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pagesnap-roadmap-2025.md  pagesnap.config.json
.github/workflows/: ci.yml
docs/: .ROADMAP.md.swp  DESIGN.md  HOW_TO.md  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.md  LESSONS_LEARNED.md  MIGRATION_GUIDE.md  PHASE2_COMPLETION_REPORT.md  PageSnap_AsA_Scalable_Screenshot_Solution.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md
prototypes/queue-test/: docker-compose.yml  package.json  producer.js  worker.js
python/: README.md  pyproject.toml  requirements.txt  setup.py
python/pagesnap/: __init__.py  cli.py  config.py  main.py
python/pagesnap/storage/: file_system_provider.py  in_memory_provider.py  s3_provider.py  storage_provider.py
